--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,4 +1,80 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+
 body {
-  background: pink;
+  width: 100%;
+  height: 100vh;
+  background: yellowgreen;
   text-align: center;
+  position: relative;
+  font-family: 'Quicksand', sans-serif;
+}
+
+header {
+  padding-top: 30px;
+}
+
+footer {
+  position: absolute;
+  bottom: 30px;
+  width: 100%;
+  color: white;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+.calculator {
+  max-width: 300px;
+  width: 96%;
+  margin: 0 auto;
+  border-radius: 6px;
+  background: white;
+  padding: 30px 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.display {
+  font-size: 24px;
+  line-height: 1.1;
+  text-align: right;
+  padding: 30px 16px;
+  background: black;
+  border-radius: 6px;
+  color: white;
+  margin-bottom: 16px;
+  word-break: break-all;
+}
+
+.btn__group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  padding: 0;
+  appearance: none;
+}
+
+.btn__group .btn {
+  flex: 1;
+  padding: 24px 8px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: all 0.4s;
+  border-radius: 6px;
+}
+
+.btn__group .btn:hover {
+  background: tomato;
+  color: white;
 }
